tests/rosetta/out/Haskell/brilliant-numbers.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/brilliant-numbers.hs:154:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/brilliant-numbers.hs:148:1
                 /workspace/mochi/tests/rosetta/out/Haskell/brilliant-numbers.hs:154:1
    |
154 | main = do
    | ^^^^
